--- a/css/index.html
+++ b/css/index.html
@@ -1,15 +1,15 @@
 <html>
-<head>
- <meta charset="utf-8"/>
- <title>
-  DnD
- </title>
- <link href="css/openai.css" rel="stylesheet"/>
- <!-- JavaScript to handle navigation buttons -->
- <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
- </script>
- <script>
-  function goBack() {
+ <head>
+  <meta charset="utf-8"/>
+  <title>
+   DnD
+  </title>
+  <link href="css/openai.css" rel="stylesheet"/>
+  <!-- JavaScript to handle navigation buttons -->
+  <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
+  </script>
+  <script>
+   function goBack() {
         window.history.back();
       }
 
@@ -20,38 +20,44 @@
       function goToIndex() {
         window.location.href = "./index.html";
       }
- </script>
-</head>
-
-<body>
-<div class="navigation">
- <a href="#" onclick="history.back(); return false;">
-  <i class="fas fa-arrow-left">
-  </i>
-  Back
- </a>
- <a href="./index.html">
-  <i class="fas fa-home">
-  </i>
-  Home
- </a>
- <a href="../index.html">
-  <i class="fas fa-level-up-alt">
-  </i>
-  Up
- </a>
- <a href="#" onclick="history.forward(); return false;">
-  <i class="fas fa-arrow-right">
-  </i>
-  Forward
- </a>
-</div>
-
-<h1>Index of css</h1>
-<ul>
-<li><a href=".\css\openai.css">openai.css</a></li>
-</ul>
-<div class="indexLinks"><ul>
-</ul></div>
-</body>
+  </script>
+ </head>
+ <body>
+  <div class="navigation">
+   <a href="#" onclick="history.back(); return false;">
+    <i class="fas fa-arrow-left">
+    </i>
+    Back
+   </a>
+   <a href="./index.html">
+    <i class="fas fa-home">
+    </i>
+    Home
+   </a>
+   <a href="../index.html">
+    <i class="fas fa-level-up-alt">
+    </i>
+    Up
+   </a>
+   <a href="#" onclick="history.forward(); return false;">
+    <i class="fas fa-arrow-right">
+    </i>
+    Forward
+   </a>
+  </div>
+  <h1>
+   Index of css
+  </h1>
+  <ul>
+   <li>
+    <a href=".\css\openai.css">
+     openai.css
+    </a>
+   </li>
+  </ul>
+  <div class="indexLinks">
+   <ul>
+   </ul>
+  </div>
+ </body>
 </html>
