--- a/campaign/index.html
+++ b/campaign/index.html
@@ -57,6 +57,21 @@
   </ul>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="test.html">
+      test
+     </a>
+    </li>
+    <li>
+     <a href="test1.html">
+      test1
+     </a>
+    </li>
+    <li>
+     <a href="test2.html">
+      test2
+     </a>
+    </li>
    </ul>
   </div>
  </body>
