Added images to index links and improved/fixed some comments.

--- a/campaign/locations/regions/Matella/Aldor_Sovereign/img/index.html
+++ b/campaign/locations/regions/Matella/Aldor_Sovereign/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Aldor_Sovereign.jpg">
+      Aldor_Sovereign.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
