--- a/campaign/locations/regions/Matella/Elda_Reem_Passlands/img/index.html
+++ b/campaign/locations/regions/Matella/Elda_Reem_Passlands/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Elda_Reem_Passlands.jpg">
+      Elda_Reem_Passlands.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
