--- a/campaign/locations/regions/Matella/Gharoni_Highlands/img/index.html
+++ b/campaign/locations/regions/Matella/Gharoni_Highlands/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Gharoni_Highlands.jpg">
+      Gharoni_Highlands.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
