--- a/campaign/locations/regions/Matella/Gostee_Wilderness/img/index.html
+++ b/campaign/locations/regions/Matella/Gostee_Wilderness/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Gostee_Wilderness.jpg">
+      Gostee_Wilderness.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
