--- a/campaign/locations/regions/Matella/Loch_Modar/img/index.html
+++ b/campaign/locations/regions/Matella/Loch_Modar/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Loch_Modar.jpg">
+      Loch_Modar.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
