--- a/campaign/locations/regions/Matella/Sifariato_Mountains/img/index.html
+++ b/campaign/locations/regions/Matella/Sifariato_Mountains/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Sifariato_Mountains.jpg">
+      Sifariato_Mountains.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
