--- a/campaign/locations/regions/Matella/The_Ashenlands/img/index.html
+++ b/campaign/locations/regions/Matella/The_Ashenlands/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="The_Ashenlands.jpg">
+      The_Ashenlands.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
