--- a/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/img/index.html
+++ b/campaign/locations/regions/Matella/Zhu_Lang_Dynasty/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Zhu_Lang_Dynasty.jpg">
+      Zhu_Lang_Dynasty.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
