--- a/campaign/locations/regions/Matella/img/index.html
+++ b/campaign/locations/regions/Matella/img/index.html
@@ -50,6 +50,16 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Matella.jpg">
+      Matella.jpg
+     </a>
+    </li>
+    <li>
+     <a href="Matella_labeled.jpg">
+      Matella_labeled.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
