--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="mmorpdnd.png">
+      mmorpdnd.png
+     </a>
+    </li>
    </ul>
   </div>
  </body>
