--- a/campaign/locations/regions/Matella/Daystone_Isle/img/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Daystone_Isle.jpg">
+      Daystone_Isle.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
