--- a/campaign/locations/regions/Matella/Tinco_Merz/img/index.html
+++ b/campaign/locations/regions/Matella/Tinco_Merz/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Tinco_Merz.jpg">
+      Tinco_Merz.jpg
+     </a>
+    </li>
    </ul>
   </div>
  </body>
