--- a/campaign/locations/regions/Matella/Zenitha/img/index.html
+++ b/campaign/locations/regions/Matella/Zenitha/img/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Zenitha.png">
+      Zenitha.png
+     </a>
+    </li>
    </ul>
   </div>
  </body>
