Improved index linking to include folders

--- a/campaign/characters/index.html
+++ b/campaign/characters/index.html
@@ -50,6 +50,16 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="non-player/index.html">
+      non-player
+     </a>
+    </li>
+    <li>
+     <a href="player/index.html">
+      player
+     </a>
+    </li>
    </ul>
   </div>
  </body>
