--- a/campaign/items/consumables/index.html
+++ b/campaign/items/consumables/index.html
@@ -50,6 +50,26 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="drink/index.html">
+      drink
+     </a>
+    </li>
+    <li>
+     <a href="food/index.html">
+      food
+     </a>
+    </li>
+    <li>
+     <a href="herbs/index.html">
+      herbs
+     </a>
+    </li>
+    <li>
+     <a href="potions/index.html">
+      potions
+     </a>
+    </li>
    </ul>
   </div>
  </body>
