--- a/campaign/items/index.html
+++ b/campaign/items/index.html
@@ -50,6 +50,41 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="armor/index.html">
+      armor
+     </a>
+    </li>
+    <li>
+     <a href="consumables/index.html">
+      consumables
+     </a>
+    </li>
+    <li>
+     <a href="magic/index.html">
+      magic
+     </a>
+    </li>
+    <li>
+     <a href="quest/index.html">
+      quest
+     </a>
+    </li>
+    <li>
+     <a href="treasure/index.html">
+      treasure
+     </a>
+    </li>
+    <li>
+     <a href="trinkets/index.html">
+      trinkets
+     </a>
+    </li>
+    <li>
+     <a href="weapons/index.html">
+      weapons
+     </a>
+    </li>
    </ul>
   </div>
  </body>
