--- a/campaign/locations/index.html
+++ b/campaign/locations/index.html
@@ -50,6 +50,46 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="cities/index.html">
+      cities
+     </a>
+    </li>
+    <li>
+     <a href="dungeons/index.html">
+      dungeons
+     </a>
+    </li>
+    <li>
+     <a href="landmarks/index.html">
+      landmarks
+     </a>
+    </li>
+    <li>
+     <a href="maps/index.html">
+      maps
+     </a>
+    </li>
+    <li>
+     <a href="planes/index.html">
+      planes
+     </a>
+    </li>
+    <li>
+     <a href="planet/index.html">
+      planet
+     </a>
+    </li>
+    <li>
+     <a href="regions/index.html">
+      regions
+     </a>
+    </li>
+    <li>
+     <a href="towns/index.html">
+      towns
+     </a>
+    </li>
    </ul>
   </div>
  </body>
