--- a/campaign/lore/index.html
+++ b/campaign/lore/index.html
@@ -50,6 +50,46 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="backgrounds/index.html">
+      backgrounds
+     </a>
+    </li>
+    <li>
+     <a href="classes/index.html">
+      classes
+     </a>
+    </li>
+    <li>
+     <a href="deities/index.html">
+      deities
+     </a>
+    </li>
+    <li>
+     <a href="factions/index.html">
+      factions
+     </a>
+    </li>
+    <li>
+     <a href="history/index.html">
+      history
+     </a>
+    </li>
+    <li>
+     <a href="languages/index.html">
+      languages
+     </a>
+    </li>
+    <li>
+     <a href="myths/index.html">
+      myths
+     </a>
+    </li>
+    <li>
+     <a href="races/index.html">
+      races
+     </a>
+    </li>
    </ul>
   </div>
  </body>
