--- a/campaign/spells/index.html
+++ b/campaign/spells/index.html
@@ -50,6 +50,56 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="level_0/index.html">
+      level_0
+     </a>
+    </li>
+    <li>
+     <a href="level_1/index.html">
+      level_1
+     </a>
+    </li>
+    <li>
+     <a href="level_2/index.html">
+      level_2
+     </a>
+    </li>
+    <li>
+     <a href="level_3/index.html">
+      level_3
+     </a>
+    </li>
+    <li>
+     <a href="level_4/index.html">
+      level_4
+     </a>
+    </li>
+    <li>
+     <a href="level_5/index.html">
+      level_5
+     </a>
+    </li>
+    <li>
+     <a href="level_6/index.html">
+      level_6
+     </a>
+    </li>
+    <li>
+     <a href="level_7/index.html">
+      level_7
+     </a>
+    </li>
+    <li>
+     <a href="level_8/index.html">
+      level_8
+     </a>
+    </li>
+    <li>
+     <a href="level_9/index.html">
+      level_9
+     </a>
+    </li>
    </ul>
   </div>
  </body>
