--- a/index.html
+++ b/index.html
@@ -51,8 +51,33 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href=".git/index.html">
+      .git
+     </a>
+    </li>
+    <li>
+     <a href=".idea/index.html">
+      .idea
+     </a>
+    </li>
+    <li>
+     <a href="campaign/index.html">
+      campaign
+     </a>
+    </li>
+    <li>
+     <a href="css/index.html">
+      css
+     </a>
+    </li>
+    <li>
      <a href="mmorpdnd.png">
       mmorpdnd.png
+     </a>
+    </li>
+    <li>
+     <a href="templates/index.html">
+      templates
      </a>
     </li>
    </ul>
