--- a/campaign/creatures/index.html
+++ b/campaign/creatures/index.html
@@ -50,6 +50,16 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="animals/index.html">
+      animals
+     </a>
+    </li>
+    <li>
+     <a href="monsters/index.html">
+      monsters
+     </a>
+    </li>
    </ul>
   </div>
  </body>
