--- a/campaign/index.html
+++ b/campaign/index.html
@@ -50,6 +50,61 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="characters/index.html">
+      characters
+     </a>
+    </li>
+    <li>
+     <a href="creatures/index.html">
+      creatures
+     </a>
+    </li>
+    <li>
+     <a href="encounters/index.html">
+      encounters
+     </a>
+    </li>
+    <li>
+     <a href="items/index.html">
+      items
+     </a>
+    </li>
+    <li>
+     <a href="locations/index.html">
+      locations
+     </a>
+    </li>
+    <li>
+     <a href="lore/index.html">
+      lore
+     </a>
+    </li>
+    <li>
+     <a href="notes/index.html">
+      notes
+     </a>
+    </li>
+    <li>
+     <a href="puzzles/index.html">
+      puzzles
+     </a>
+    </li>
+    <li>
+     <a href="quests/index.html">
+      quests
+     </a>
+    </li>
+    <li>
+     <a href="spells/index.html">
+      spells
+     </a>
+    </li>
+    <li>
+     <a href="timeline/index.html">
+      timeline
+     </a>
+    </li>
    </ul>
   </div>
  </body>
