--- a/campaign/locations/planet/index.html
+++ b/campaign/locations/planet/index.html
@@ -50,6 +50,21 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="continents/index.html">
+      continents
+     </a>
+    </li>
+    <li>
+     <a href="oceans/index.html">
+      oceans
+     </a>
+    </li>
+    <li>
+     <a href="seas/index.html">
+      seas
+     </a>
+    </li>
    </ul>
   </div>
  </body>
