--- a/campaign/locations/regions/index.html
+++ b/campaign/locations/regions/index.html
@@ -50,6 +50,11 @@
   </h1>
   <div class="indexLinks">
    <ul>
+    <li>
+     <a href="Matella/index.html">
+      Matella
+     </a>
+    </li>
    </ul>
   </div>
  </body>
