Modified dnd-info to hold a header section, added bg to html, created daystone_isle file.

--- a/campaign/locations/regions/Matella/Daystone_Isle/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Daystone_Isle.html">
+      Daystone_Isle
+     </a>
+    </li>
+    <li>
      <a href="img/index.html">
       img
      </a>
