Updated index links to include direct link to images in img/ folders

--- a/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
+++ b/campaign/locations/regions/Matella/Aldor_Sovereign/index.html
@@ -51,8 +51,8 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="img/index.html">
-      img
+     <a href="img/Aldor_Sovereign.jpg">
+      img/Aldor_Sovereign.jpg
      </a>
     </li>
    </ul>
