--- a/campaign/locations/regions/Matella/Daystone_Isle/index.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/index.html
@@ -56,8 +56,8 @@
      </a>
     </li>
     <li>
-     <a href="img/index.html">
-      img
+     <a href="img/Daystone_Isle.jpg">
+      img/Daystone_Isle.jpg
      </a>
     </li>
    </ul>
