--- a/campaign/locations/regions/Matella/Visterguarde/index.html
+++ b/campaign/locations/regions/Matella/Visterguarde/index.html
@@ -51,8 +51,8 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="img/index.html">
-      img
+     <a href="img/Visterguarde.jpg">
+      img/Visterguarde.jpg
      </a>
     </li>
    </ul>
