--- a/campaign/locations/regions/Matella/index.html
+++ b/campaign/locations/regions/Matella/index.html
@@ -141,8 +141,13 @@
      </a>
     </li>
     <li>
-     <a href="img/index.html">
-      img
+     <a href="img/Matella.jpg">
+      img/Matella.jpg
+     </a>
+    </li>
+    <li>
+     <a href="img/Matella_labeled.jpg">
+      img/Matella_labeled.jpg
      </a>
     </li>
    </ul>
