--- a/campaign/locations/regions/Matella/Zenitha/index.html
+++ b/campaign/locations/regions/Matella/Zenitha/index.html
@@ -51,8 +51,8 @@
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="img/index.html">
-      img
+     <a href="img/Zenitha.png">
+      img/Zenitha.png
      </a>
     </li>
    </ul>
