--- a/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
@@ -57,7 +57,11 @@
     Summary
    </h3>
    <p class="first-paragraph">
-    Nestled along the southwestern shores of The Ashenlands, Daystone Isle exudes a distinct aura of elegance and privilege as the domain of the Daystone royal family. The island, bordered by the vast sea to the south and flanked by The Ashenlands to the east and the Mentassa Plains far to the north, holds both prosperity and a complex relationship with its inhabitants. Here is a general description of Daystone Isle:
+    Nestled along the southwestern shores of The Ashenlands, Daystone Isle exudes a distinct aura of elegance and privilege as the domain of the Daystone royal family. The island, bordered by the vast sea to the south and flanked by The Ashenlands to the east and the
+    <a href="../Mentassa_Plains/Mentassa_Plains.html">
+     Mentassa_Plains
+    </a>
+    far to the north, holds both prosperity and a complex relationship with its inhabitants. Here is a general description of Daystone Isle:
    </p>
    <h4>
     Royal Dominion
@@ -87,7 +91,11 @@
     Trade Relations
    </h4>
    <p class="subsection">
-    Although the Daystone royal family tightly controls many resources on the island, a degree of trade exists with neighboring regions. The island's surplus commodities, carefully selected and overseen by the royal family, find their way to The Ashenlands and the Mentassa Plains. This trade connection allows for the exchange of goods, fostering economic ties and providing a channel for limited prosperity beyond the Daystone Isle's boundaries.
+    Although the Daystone royal family tightly controls many resources on the island, a degree of trade exists with neighboring regions. The island's surplus commodities, carefully selected and overseen by the royal family, find their way to The Ashenlands and the
+    <a href="../Mentassa_Plains/Mentassa_Plains.html">
+     Mentassa_Plains
+    </a>
+    . This trade connection allows for the exchange of goods, fostering economic ties and providing a channel for limited prosperity beyond the Daystone Isle's boundaries.
    </p>
    <h4>
     Opulence and Intrigue
