--- a/campaign/locations/regions/Matella/Mentassa_Plains/index.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/index.html
@@ -51,6 +51,11 @@
   <div class="indexLinks">
    <ul>
     <li>
+     <a href="Mentassa_Plains.html">
+      Mentassa_Plains
+     </a>
+    </li>
+    <li>
      <a href="img/Mentassa_Plains.jpg">
       img/Mentassa_Plains.jpg
      </a>
