--- a/campaign/locations/regions/Matella/index.html
+++ b/campaign/locations/regions/Matella/index.html
@@ -96,6 +96,11 @@
      </a>
     </li>
     <li>
+     <a href="Matella.html">
+      Matella
+     </a>
+    </li>
+    <li>
      <a href="Mentassa_Plains/index.html">
       Mentassa_Plains
      </a>
