--- a/campaign/locations/regions/Matella/Alderpine/img/index.html
+++ b/campaign/locations/regions/Matella/Alderpine/img/index.html
@@ -4,7 +4,7 @@
   <title>
    index
   </title>
-  <link href="../../../../../css/mmorpdnd.css" rel="stylesheet"/>
+  <link href="../../../../../../css/mmorpdnd.css" rel="stylesheet"/>
   <!-- JavaScript to handle navigation buttons -->
   <script crossorigin="anonymous" src="https://kit.fontawesome.com/f3aa8d5630.js">
   </script>
@@ -46,18 +46,13 @@
    </a>
   </div>
   <h1>
-   Index of Eldara
+   Index of img
   </h1>
   <div class="indexLinks">
    <ul>
     <li>
-     <a href="Eldara.html">
-      Eldara
-     </a>
-    </li>
-    <li>
-     <a href="img/Eldara.jpg">
-      img/Eldara.jpg
+     <a href="Alderpine.jpg">
+      Alderpine.jpg
      </a>
     </li>
    </ul>
