--- a/campaign/locations/regions/Matella/Matella.html
+++ b/campaign/locations/regions/Matella/Matella.html
@@ -282,7 +282,9 @@
    <p>
     <ul>
      <li>
-      Alderpine
+      <a href="Alderpine/Alderpine.html">
+       Alderpine
+      </a>
      </li>
      <li>
       Aldor Sovereign
@@ -294,13 +296,19 @@
       Bakaria
      </li>
      <li>
-      Daystone Isle
+      <a href="Daystone_Isle/Daystone_Isle.html">
+       Daystone_Isle
+      </a>
      </li>
      <li>
-      Eldara
+      <a href="Eldara/Eldara.html">
+       Eldara
+      </a>
      </li>
      <li>
-      Elda Reem Passlands
+      <a href="Elda_Reem_Passlands/Elda_Reem_Passlands.html">
+       Elda_Reem_Passlands
+      </a>
      </li>
      <li>
       Gharoni Highlands
@@ -309,7 +317,9 @@
       Loch Modar
      </li>
      <li>
-      Mentassa Plains
+      <a href="Mentassa_Plains/Mentassa_Plains.html">
+       Mentassa_Plains
+      </a>
      </li>
      <li>
       Tinco Merz
