--- a/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
@@ -57,7 +57,11 @@
     Summary
    </h3>
    <p class="first-paragraph">
-    Nestled to the west of The Ashenlands, the Mentassa Plains unveil a picturesque province characterized by vast expanses of rolling hills and fertile plains. This region, with its serene beauty and abundant natural resources, offers a unique landscape and a distinctive way of life.
+    Nestled to the west of
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    , the Mentassa Plains unveil a picturesque province characterized by vast expanses of rolling hills and fertile plains. This region, with its serene beauty and abundant natural resources, offers a unique landscape and a distinctive way of life.
    </p>
    <p>
     Stretching as far as the eye can see, the Mentassa Plains encompass a sweeping expanse of undulating hills and sprawling plains. The land is predominantly marked by open grasslands, dotted with occasional clusters of trees and patches of wildflowers. To the north, the towering silhouette of a majestic mountain range commands attention, providing a breathtaking backdrop to the plains. To the west lies a sprawling swamp area and the
@@ -70,7 +74,11 @@
     While the Mentassa Plains may not boast many large towns or cities, it thrives with a myriad of homesteads and farmland that speckle the countryside. The inhabitants of this province are primarily farmers, ranchers, and homesteaders who have carved out their own idyllic lifestyles in harmony with the fertile land. The plains support a variety of agricultural activities, including the cultivation of crops, animal husbandry, and the nurturing of orchards and vineyards. Homesteads are often self-sufficient, relying on the bountiful natural resources of the region to sustain their way of life.
    </p>
    <p>
-    Despite the absence of prominent urban centers, the Mentassa Plains actively participate in regional trade networks. Local produce, including grains, fruits, vegetables, and livestock, finds its way to markets within The Ashenlands and neighboring provinces. Small marketplaces and trading posts occasionally emerge as meeting points for locals and merchants, facilitating the exchange of goods, fostering community connections, and supporting the economy of the region. The proximity to the sea or bay area to the south also offers opportunities for fishing and maritime trade, further diversifying the economic activities of the province.
+    Despite the absence of prominent urban centers, the Mentassa Plains actively participate in regional trade networks. Local produce, including grains, fruits, vegetables, and livestock, finds its way to markets within
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    and neighboring provinces. Small marketplaces and trading posts occasionally emerge as meeting points for locals and merchants, facilitating the exchange of goods, fostering community connections, and supporting the economy of the region. The proximity to the sea or bay area to the south also offers opportunities for fishing and maritime trade, further diversifying the economic activities of the province.
    </p>
    <p>
     The Mentassa Plains embrace a captivating sense of wilderness and adventure. With its proximity to the mountain range and the sprawling swamps, the province allures adventurers, naturalists, and explorers. The unspoiled beauty of the landscapes beckons intrepid souls to venture into the unknown, seeking hidden treasures, encountering unique wildlife, and unraveling the mysteries of the region. From hiking trails to bird-watching opportunities, the Mentassa Plains offer a captivating canvas for those who yearn to immerse themselves in nature's embrace.
@@ -134,7 +142,11 @@
     Interaction with Neighboring Regions
    </h4>
    <p class="subsection">
-    The Mentassa Plains, situated between the mountain range to the north and the swamp area to the west, serves as a natural buffer between different regions. While the province itself may not witness significant population influx or large-scale urbanization, it experiences occasional interactions with neighboring provinces, especially The Ashenlands to the east and the coastal areas to the south. Trade routes, periodic markets, and cultural exchanges facilitate contact between the Mentassa Plains and other regions, fostering a sense of interconnectedness and enabling the exchange of goods, knowledge, and experiences.
+    The Mentassa Plains, situated between the mountain range to the north and the swamp area to the west, serves as a natural buffer between different regions. While the province itself may not witness significant population influx or large-scale urbanization, it experiences occasional interactions with neighboring provinces, especially
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    to the east and the coastal areas to the south. Trade routes, periodic markets, and cultural exchanges facilitate contact between the Mentassa Plains and other regions, fostering a sense of interconnectedness and enabling the exchange of goods, knowledge, and experiences.
    </p>
    <p class="first-paragraph">
     In summary, the demographics of the Mentassa Plains reflect a rural and agrarian population, consisting of farmers, ranchers, and homesteaders who have established a close bond with the land. The cultural diversity within the region adds vibrancy to the communities, while occasional interactions with neighboring provinces contribute to the exchange of ideas and resources. The population size varies across the plains, with settlements scattered throughout the fertile landscapes, embodying a way of life rooted in self-sufficiency, agricultural practices, and a deep appreciation for the natural world.
