--- a/campaign/locations/regions/Matella/Alderpine/Alderpine.html
+++ b/campaign/locations/regions/Matella/Alderpine/Alderpine.html
@@ -207,7 +207,11 @@
     Governments
    </h3>
    <p class="first-paragraph">
-    Alderpine, as a province, consists of diverse regions with distinct governance structures that reflect the cultural and political systems within its boundaries. While the primary inhabitants of Alderpine emphasize self-governance and independence, the neighboring provinces of Zhu Lang Dynasty and Ashenlands influence the region with their respective governing styles. Here is an overview of the governments present in Alderpine and their relation to these neighboring provinces:
+    Alderpine, as a province, consists of diverse regions with distinct governance structures that reflect the cultural and political systems within its boundaries. While the primary inhabitants of Alderpine emphasize self-governance and independence, the neighboring provinces of Zhu Lang Dynasty and
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    influence the region with their respective governing styles. Here is an overview of the governments present in Alderpine and their relation to these neighboring provinces:
    </p>
    <h4>
     Tribal Governance
@@ -222,10 +226,21 @@
     To the north of Alderpine lies the Zhu Lang Dynasty, a political entity characterized by centralized and authoritarian rule. While the direct impact of the dynasty's governance may not extend deeply into Alderpine, its presence in the neighboring region can influence the province through trade, political alliances, or occasional border disputes. The proximity to the Zhu Lang Dynasty may shape the political landscape and interactions in the northern regions of Alderpine.
    </p>
    <h4>
-    Influence of Ashenlands
+    Influence of
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
    </h4>
    <p class="subsection">
-    Located in the southern reaches of Alderpine, The Ashenlands operates as a free province where towns, cities, and individuals govern themselves based on capitalist principles and trade. This region promotes individual autonomy and local governance, allowing communities within Alderpine's southern territories to shape their own economic and social policies. The Ashenlands' emphasis on trade and capitalism can foster economic ties and cultural exchange between Alderpine and this neighboring province.
+    Located in the southern reaches of Alderpine,
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    operates as a free province where towns, cities, and individuals govern themselves based on capitalist principles and trade. This region promotes individual autonomy and local governance, allowing communities within Alderpine's southern territories to shape their own economic and social policies.
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    emphasis on trade and capitalism can foster economic ties and cultural exchange between Alderpine and this neighboring province.
    </p>
    <h4>
     Self-Governance and Independence
@@ -234,7 +249,11 @@
     Overall, the province of Alderpine upholds the values of self-governance and independence. While tribal communities and neighboring provinces have their respective governing systems, numerous smaller settlements and homesteads within Alderpine practice self-governance based on local customs and shared values. These communities prioritize communal harmony, cooperation, and a deep connection with the natural world while maintaining their independence within the province.
    </p>
    <p class="first-paragraph">
-    It is important to recognize that while the governments within Alderpine focus on self-governance, the presence and influence of the neighboring Zhu Lang Dynasty and Ashenlands can shape certain aspects of the region's politics, trade relations, and cultural exchanges. The dynamics between these provinces and Alderpine contribute to the diverse political landscape and cultural tapestry of the province, enriching the experiences and interactions of its inhabitants.
+    It is important to recognize that while the governments within Alderpine focus on self-governance, the presence and influence of the neighboring Zhu Lang Dynasty and
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    can shape certain aspects of the region's politics, trade relations, and cultural exchanges. The dynamics between these provinces and Alderpine contribute to the diverse political landscape and cultural tapestry of the province, enriching the experiences and interactions of its inhabitants.
    </p>
   </div>
   <hr/>
