--- a/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
@@ -57,7 +57,15 @@
     Summary
    </h3>
    <p class="first-paragraph">
-    Nestled along the southwestern shores of The Ashenlands, Daystone Isle exudes a distinct aura of elegance and privilege as the domain of the Daystone royal family. The island, bordered by the vast sea to the south and flanked by The Ashenlands to the east and the
+    Nestled along the southwestern shores of
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    , Daystone Isle exudes a distinct aura of elegance and privilege as the domain of the Daystone royal family. The island, bordered by the vast sea to the south and flanked by
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    to the east and the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
      Mentassa_Plains
     </a>
@@ -91,7 +99,11 @@
     Trade Relations
    </h4>
    <p class="subsection">
-    Although the Daystone royal family tightly controls many resources on the island, a degree of trade exists with neighboring regions. The island's surplus commodities, carefully selected and overseen by the royal family, find their way to The Ashenlands and the
+    Although the Daystone royal family tightly controls many resources on the island, a degree of trade exists with neighboring regions. The island's surplus commodities, carefully selected and overseen by the royal family, find their way to
+    <a href="../The_Ashenlands/The_Ashenlands.html">
+     The Ashenlands
+    </a>
+    and the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
      Mentassa_Plains
     </a>
