Fixing some underscores left in linked text

--- a/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
+++ b/campaign/locations/regions/Matella/Daystone_Isle/Daystone_Isle.html
@@ -67,7 +67,7 @@
     </a>
     to the east and the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
-     Mentassa_Plains
+     Mentassa Plains
     </a>
     far to the north, holds both prosperity and a complex relationship with its inhabitants. Here is a general description of Daystone Isle:
    </p>
@@ -105,7 +105,7 @@
     </a>
     and the
     <a href="../Mentassa_Plains/Mentassa_Plains.html">
-     Mentassa_Plains
+     Mentassa Plains
     </a>
     . This trade connection allows for the exchange of goods, fostering economic ties and providing a channel for limited prosperity beyond the Daystone Isle's boundaries.
    </p>
