--- a/campaign/locations/regions/Matella/Matella.html
+++ b/campaign/locations/regions/Matella/Matella.html
@@ -299,7 +299,7 @@
      </li>
      <li>
       <a href="Daystone_Isle/Daystone_Isle.html">
-       Daystone_Isle
+       Daystone Isle
       </a>
      </li>
      <li>
@@ -309,7 +309,7 @@
      </li>
      <li>
       <a href="Elda_Reem_Passlands/Elda_Reem_Passlands.html">
-       Elda_Reem_Passlands
+       Elda Reem Passlands
       </a>
      </li>
      <li>
@@ -320,7 +320,7 @@
      </li>
      <li>
       <a href="Mentassa_Plains/Mentassa_Plains.html">
-       Mentassa_Plains
+       Mentassa Plains
       </a>
      </li>
      <li>
