--- a/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
+++ b/campaign/locations/regions/Matella/Mentassa_Plains/Mentassa_Plains.html
@@ -66,7 +66,7 @@
    <p>
     Stretching as far as the eye can see, the Mentassa Plains encompass a sweeping expanse of undulating hills and sprawling plains. The land is predominantly marked by open grasslands, dotted with occasional clusters of trees and patches of wildflowers. To the north, the towering silhouette of a majestic mountain range commands attention, providing a breathtaking backdrop to the plains. To the west lies a sprawling swamp area and the
     <a href="../Elda_Reem_Passlands/Elda_Reem_Passlands.html">
-     Elda_Reem_Passlands
+     Elda Reem Passlands
     </a>
     , an intriguing ecosystem teeming with diverse flora and fauna. Finally, to the south, the shimmering waters of a vast sea or bay area create a natural boundary, offering glimpses of maritime beauty.
    </p>
